Added a Java option to get rid of the SecurityManager removal message